pkg/safeguards/constraints/ContainerResourceLimits/constraint/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAzureV3ContainerLimits
metadata:
  name: v3-container-limits
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
  parameters:
    cpuLimit : "200m"
    memoryLimit: "1Gi"
    excludedContainers: ["my-container"]
    excludedImages: ["nginx:latest"]
